feat: big refactoring to java 21 using IDEA recommendations: - switch Logging system to the generic System facade - update language where possible (records, foreach, generics, try with resources, parameters instanceof) - update obsolete library calls - get rid of useless methods that where safe to delete, switch to constants where possible - some typos - got rid of useless casts - Objects for null safety when loading resources