@@ -1,6 +1,8 @@
 package com.mpcmaid.pgm.command;
 
 import java.io.File;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -12,6 +14,8 @@ import com.mpcmaid.pgm.SampleMatrix;
 import com.mpcmaid.pgm.Sample.Status;
 
 public class ImportCommandTest extends TestCase {
+
+	public final static Logger logger = System.getLogger(ImportCommandTest.class.getName());
 
 	public static final class SampleList extends ImportCommand {
 		private final List<Sample> list = new ArrayList<>();
@@ -26,7 +30,7 @@ public class ImportCommandTest extends TestCase {
 		}
 
 		public Sample[] getSamples() {
-			return (Sample[]) list.toArray(new Sample[list.size()]);
+			return list.toArray(new Sample[0]);
 		}
 
 		// unused
@@ -38,47 +42,39 @@ public class ImportCommandTest extends TestCase {
 			return list.size();
 		}
 
-		public String getReport() {
-			return super.getReport();
-		}
-
-		public boolean hasError() {
-			return super.hasError();
-		}
-
 	}
 
 	public void testSampleList_allOK() {
 		File fileOk = new File("chh.wav");
 
-		SampleList list = new SampleList(Sample.RENAMED, Arrays.asList(new File[] { fileOk }));
+		SampleList list = new SampleList(Sample.RENAMED, List.of(fileOk));
 		assertEquals(1, list.size());
 		assertTrue(list.getSamples()[0].isValid());
 		assertFalse(list.hasError());
-		System.out.println(list.getReport());
+		logger.log(Level.INFO, list.getReport());
 	}
 
 	public void testSampleList_1renamed() {
 		File fileOk = new File("chh.wav");
 		File fileTooLong = new File("chh45678901234567.wav");
 
-		SampleList list = new SampleList(Sample.RENAMED, Arrays.asList(new File[] { fileTooLong, fileOk }));
+		SampleList list = new SampleList(Sample.RENAMED, Arrays.asList(fileTooLong, fileOk));
 		assertEquals(2, list.size());
 		assertTrue(list.getSamples()[1].isValid());
 		assertTrue(list.getSamples()[0].isRenamed());
 		assertTrue(list.hasError());
-		System.out.println(list.getReport());
+		logger.log(Level.INFO, list.getReport());
 	}
 
 	public void testSampleList_1rejected() {
 		File fileOk = new File("chh.wav");
 		File fileTooLong = new File("chh45678901234567.wav");
 
-		SampleList list = new SampleList(Sample.REJECTED, Arrays.asList(new File[] { fileTooLong, fileOk }));
+		SampleList list = new SampleList(Sample.REJECTED, Arrays.asList(fileTooLong, fileOk));
 		assertEquals(1, list.size());
 		assertTrue(list.getSamples()[0].isValid());
 		assertTrue(list.hasError());
-		System.out.println(list.getReport());
+		logger.log(Level.INFO, list.getReport());
 	}
 
 }
